--- a/DeathValley/Views/Chart/Index.cshtml
+++ b/DeathValley/Views/Chart/Index.cshtml
@@ -4,29 +4,50 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
 
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Parameters</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
+<div class="container">
+        <table>
+            <tr>
+                <td>
+                    <span>Function: y=</span>
+                    <input type="text" id="ParameterA" />
+                </td>
+                <td>
+                    <span>x^2 +</span>
+                    <input type="text" id="ParameterB" />
+                </td>
+                <td>
+                    <span>x + </span>
+                    <input type="text" id="ParameterC" />
+                </td>
+                <td>
+                    <span></span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <span>Step:</span>
+                    <input type="text" id="Step" />
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <span>From:</span>
+                    <input type="text" id="Range1" />
+                    <span>to</span>
+                    <input type="text" id="Range2" />
+                </td>
+            </tr>
+        </table>
+        <input type="submit" onclick="drawChart()" class="btn btn-primary" />
     </div>
-}
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+<div id="results"></div>
+<div id="chartContainer"></div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+
+    @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.min.js")
 }
