--- a/DeathValley/Views/Shared/_Layout.cshtml
+++ b/DeathValley/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
